navbar margin when collapsed fixed, responsive items

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,9 @@ header .navbar
 	.navbar .navbar-collapse {
 		text-align: center;
 	}
+
+
+
 }
 
 /*Navbar collapsed*/
@@ -179,6 +182,9 @@ header .navbar
 	{
 		background-color: #ddd;
 	}
+	.navbar .navbar-header{
+		margin-right: 0;
+	}
 }
 
 
@@ -189,7 +195,7 @@ header .navbar
 //////////////////////////////////////////////////////////////////////////////////////////////////*/
 .section
 {
-	padding:50px;
+	padding:40px;
 	min-height: 400px;
 }
 
@@ -239,12 +245,6 @@ header .navbar
 	{
 		border:1px solid;
 		position: relative;
-	}
-
-	.col-frise:not(:last-child) .frise-item.front
-	{
-		/*z-index: 5;*/
-		/*background-color:#fff;*/
 	}
 
 	.col-frise:nth-child(1) .frise-item
@@ -314,6 +314,7 @@ header .navbar
 {
 	border-radius: 10px;
 	padding: 10px;
+	margin: 10px;
 }
 
 .comp-item-content
